ProductApi/k8s/product-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: kamaloncode/productapi:1.0
        ports:
        - containerPort: 80
