ProductApi/k8s/sql-server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-server
spec:
  serviceName: sql-server-service
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
  - metadata:
      name: mssql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: standard
