ProductApi/k8s/product-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  labels:
    app: product-api
spec:
  selector:
    app: product-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
