ProductApi/k8s/sql-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sql-volume
          mountPath: /var/opt/mssql
      volumes:
      - name: sql-volume
        persistentVolumeClaim:
          claimName: sql-data
---
apiVersion: v1
kind: Service
metadata:
  name: sql-server
spec:
  selector:
    app: sql-server
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
  type: ClusterIP
