ProductApi/k8s/sql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-server-service
spec:
  ports:
  - port: 1433
    targetPort: 1433
  clusterIP: None
  selector:
    app: sql-db
